# backend_todolist

./: README.md  backend_todolist.db  crud.py  database.py  inedx.html  main.py  models.py  pyproject.toml  schemas.py  test.db  test_main.py
sqlite3/: todolist.sqlite3
templates/: home.html
