[tool.poetry]
name = "backend-todolist"
version = "3.12"
description = ""
authors = ["aodori <sungho6621z@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
python-multipart = "^0.0.7"
jinja2 = "^3.1.3"
sqlalchemy = "^2.0.25"
httpx = "^0.26.0"
tree = "^0.2.4"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
httpx = "^0.26.0"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
